--- a/index.html
+++ b/index.html
@@ -12,26 +12,10 @@
         import { getAuth, signInAnonymously, onAuthStateChanged, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, onSnapshot, collection, query, addDoc, serverTimestamp, getDocs, deleteDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // Variáveis de ambiente
-        let firebaseConfig = {
-              apiKey: "AIzaSyBPEKtr1KM96N3MQi1IKCOTIjVltQ3t_8s",
-              authDomain: "sistema-de-registro-de-faltas.firebaseapp.com",
-              projectId: "sistema-de-registro-de-faltas",
-              storageBucket: "sistema-de-registro-de-faltas.firebasestorage.app",
-              messagingSenderId: "959428862131",
-              appId: "1:959428862131:web:1435601cc3e46b5d0b10c6",
-        };
-        let initialAuthToken = null;
-        let appId = 'default-app-id';
-
-        try {
-            // Tentativa de carregar as variáveis de ambiente do Canvas.
-            initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
-            appId = typeof __app_id !== 'undefined' ? __app_id : appId;
-            firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : firebaseConfig;
-        } catch (e) {
-            console.error("Erro ao carregar as variáveis de ambiente do Canvas:", e);
-        }
+        // Variáveis de ambiente fornecidas pelo Canvas para garantir a conexão correta
+        const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
+        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
         
         let app = null;
         let auth = null;
@@ -143,7 +127,7 @@
                 updateUI(currentTotal, newHistory, summary);
             }, (error) => {
                 console.error("Erro ao buscar dados:", error);
-                document.getElementById('error-message').textContent = "Erro ao carregar os dados. Verifique sua conexão. (Detecção de Erro: Permissões de Acesso).";
+                document.getElementById('error-message').textContent = "Erro ao carregar os dados. Verifique as regras de segurança do Firestore.";
                 document.getElementById('error-message').style.display = 'block';
             });
         }
